Markdown edits have been made.

--- a/notebooks/02_genre_analysis.ipynb
+++ b/notebooks/02_genre_analysis.ipynb
@@ -203,6 +203,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b02b58ac",
+   "metadata": {},
+   "source": [
+    "### 1. 🎞️ Film Türlerine Göre Ortalama Puanlar\n",
+    "Verilere göre \"History\", \"War\" ve \"Drama\" gibi ciddi ve duygusal türlerdeki filmler, diğer türlere göre daha yüksek puanlanmıştır. Buna karşılık \"Horror\", \"TV Movie\" ve \"Comedy\" türleri, izleyicilerden daha düşük ortalama puanlar almıştır. Bu durum, izleyici beklentilerinin türlere göre değişebileceğini ve bazı türlerin daha eleştirel değerlendirildiğini göstermektedir.\n",
+    "\n",
+    "### 1. 🎞️ Average Ratings by Genre\n",
+    "According to the data, films in serious and emotional genres such as \"History\", \"War\", and \"Drama\" received higher ratings compared to other genres. In contrast, genres like \"Horror\", \"TV Movie\", and \"Comedy\" received lower average ratings from viewers. This indicates that audience expectations may vary by genre, and some genres are evaluated more critically."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "63660c11",
@@ -289,12 +301,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92a58934",
+   "cell_type": "markdown",
+   "id": "061318f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 2. 🔢 Yorum Sayısına Göre Türlerin Popülerliği\n",
+    "Film türleri arasında en çok oy alanlar \"Action\", \"Adventure\", \"Comedy\" gibi geniş izleyici kitlesine hitap eden türlerdir. Bu durum, bu türlerin hem daha çok izleyiciye ulaştığını hem de daha fazla etkileşim aldığını göstermektedir. Buna karşın \"History\" veya \"War\" gibi yüksek puanlı türlerin daha az oy aldığı gözlemlenmiştir. Bu da bu türlerin daha niş bir kitle tarafından izlendiğini düşündürebilir.\n",
+    "\n",
+    "### 2. 🔢 Popularity by Genre (Vote Count)\n",
+    "Among movie genres, \"Action\", \"Adventure\", and \"Comedy\" — which appeal to large audiences — received the most votes. This suggests that these genres not only reach more viewers but also receive more interaction. In contrast, high-rated genres like \"History\" or \"War\" received fewer votes, which may indicate they are watched by more niche audiences."
+   ]
   }
  ],
  "metadata": {
