--- a/notebooks/03_actor_analysis.ipynb
+++ b/notebooks/03_actor_analysis.ipynb
@@ -201,12 +201,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0380742b",
+   "cell_type": "markdown",
+   "id": "bfc4ee4b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 5. 🎭 Oyunculara Göre Ortalama Puan Analizi\n",
+    "En az 3 filmde oynamış oyuncular arasında yer alan X, Y ve Z, yüksek ortalama puanlara sahip filmlerde oynamıştır. Bu, bu oyuncuların yer aldığı projelerin izleyici tarafından daha olumlu değerlendirildiğini gösterebilir.\n",
+    "\n",
+    "### 5. 🎭 Average Ratings by Actors\n",
+    "Among actors who starred in at least 3 films, X, Y, and Z appeared in films with high average ratings. This may indicate that the projects these actors participate in are more positively evaluated by viewers.\n"
+   ]
   }
  ],
  "metadata": {
