--- a/notebooks/03_budget_analysis.ipynb
+++ b/notebooks/03_budget_analysis.ipynb
@@ -59,12 +59,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4fa471c",
+   "cell_type": "markdown",
+   "id": "9789e483",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3. 💸 Yapım Bütçesi ile Puan Arasındaki İlişki\n",
+    "Grafikte görüldüğü üzere bütçe ile izleyici puanı arasında belirgin bir korelasyon bulunmamaktadır. Büyük bütçeli filmler her zaman yüksek beğeni kazanmazken, düşük bütçeli bazı yapımlar oldukça yüksek puanlar alabilmiştir. Bu durum film kalitesinin sadece finansal yatırımla açıklanamayacağını göstermektedir.\n",
+    "\n",
+    "### 3. 💸 Relationship Between Budget and Rating\n",
+    "As seen in the chart, there is no clear correlation between budget and viewer rating. While high-budget films do not always receive high acclaim, some low-budget productions received very high ratings. This shows that the quality of a film cannot be explained solely by financial investment."
+   ]
   }
  ],
  "metadata": {
