--- a/notebooks/03_director_analysis.ipynb
+++ b/notebooks/03_director_analysis.ipynb
@@ -299,12 +299,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "647f51ae",
+   "cell_type": "markdown",
+   "id": "be983a04",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 4. 🎬 Yönetmenlere Göre Ortalama Puan Analizi (3+ Film)\n",
+    "En az 3 filmi bulunan yönetmenler arasında ortalama puanı en yüksek olanlar öne çıkarılmıştır. Bu analiz, hem kalite hem de üretkenlik açısından dikkat çeken yönetmenleri belirlemede yardımcı olabilir.\n",
+    "\n",
+    "### 4. 🎬 Average Ratings by Director (3+ Movies)\n",
+    "Among directors with at least 3 films, those with the highest average ratings were highlighted. This analysis helps identify directors who stand out in terms of both quality and productivity."
+   ]
   }
  ],
  "metadata": {
