--- a/notebooks/04_best_and_worst_movies.ipynb
+++ b/notebooks/04_best_and_worst_movies.ipynb
@@ -323,12 +323,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e18aee3",
+   "cell_type": "markdown",
+   "id": "7a6526b8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 7. 🏆 En Beğenilen ve En Beğenilmeyen 10 Film (1000+ Oy)\n",
+    "Bu analiz, en çok oylanan ve en uç puanlara sahip filmleri karşılaştırmak için yapılmıştır. En beğenilen yapımlar genellikle kültleşmiş, dramatik filmlerken; en düşük puanlılar, çoğunlukla yüksek beklentiyle karşılanan ancak başarısız bulunmuş yapımlardır.\n",
+    "\n",
+    "### 7. 🏆 Top 10 Highest and Lowest Rated Movies (1000+ Votes)\n",
+    "This analysis was conducted to compare the most voted films with the most extreme scores. While the most liked films are usually cult and dramatic productions, the lowest-rated ones are often highly anticipated but ultimately considered unsuccessful.\n"
+   ]
   }
  ],
  "metadata": {
