--- a/notebooks/04_low_rating_popular_movies.ipynb
+++ b/notebooks/04_low_rating_popular_movies.ipynb
@@ -306,12 +306,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70f970dc",
+   "cell_type": "markdown",
+   "id": "4baa51ea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 6. 👎 Çok Oylanmış ama Düşük Puan Almış Filmler\n",
+    "Bu grafik, yüksek etkileşim (1000+ oy) almasına rağmen izleyici tarafından düşük puan verilen filmleri göstermektedir. Bu durum, bazen büyük beklenti yaratan ama hayal kırıklığına uğratan yapımların çokça oy aldığı halde beğenilmediğini ortaya koyar.\n",
+    "\n",
+    "### 6. 👎 Most Voted but Low Rated Movies\n",
+    "This chart shows movies that received high engagement (1000+ votes) but were rated poorly by viewers. This reveals that some productions which created high expectations may have disappointed audiences despite receiving a large number of votes."
+   ]
   }
  ],
  "metadata": {
