--- a/notebooks/04_popularity_vs_rating.ipynb
+++ b/notebooks/04_popularity_vs_rating.ipynb
@@ -44,12 +44,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53d0db6f",
+   "cell_type": "markdown",
+   "id": "dd3ad5cc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 10. 🔥 Popülerlik ile Puan Arasındaki İlişki\n",
+    "Bu grafik, TMDB’nin popülerlik skoru ile izleyici puanı arasında güçlü bir korelasyon olmadığını göstermektedir.\n",
+    "Bazı filmler yüksek popülerliğe rağmen ortalama puan alırken, bazı düşük popülerlikteki filmler izleyici tarafından oldukça beğenilmiştir.\n",
+    "Bu durum, popülerliğin genellikle pazarlama etkisi, büyük stüdyo bütçesi veya oyuncu kadrosu gibi faktörlerle oluştuğunu; fakat bu faktörlerin izleyici beğenisiyle doğrudan örtüşmeyebileceğini ortaya koyar.\n",
+    "\n",
+    "### 10. 🔥 Popularity vs Rating Relationship\n",
+    "This chart shows that there is no strong correlation between TMDB's popularity score and viewer rating. Some films have high popularity but receive average ratings, while some low-popularity films are highly appreciated by audiences. This reveals that popularity often stems from factors like marketing, big studio budgets, or cast, which may not directly align with viewer satisfaction."
+   ]
   }
  ],
  "metadata": {
