--- a/notebooks/04_top_roi_movies.ipynb
+++ b/notebooks/04_top_roi_movies.ipynb
@@ -210,12 +210,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f84736ea",
+   "cell_type": "markdown",
+   "id": "664e76cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 9. 💰 En Yüksek ROI (Yatırım Getirisi) Filmler\n",
+    "Bu grafik, yapım maliyetine oranla en fazla hasılat elde eden filmleri göstermektedir. Özellikle düşük bütçeli bazı yapımlar, olağanüstü bir izleyici ilgisiyle büyük gelir elde etmiştir. Bu durum, yalnızca yüksek bütçenin değil, iyi hikaye ve pazarlamanın da başarının anahtarı olduğunu gösterir.\n",
+    "\n",
+    "### 9. 💰 Highest ROI (Return on Investment) Movies\n",
+    "This chart shows the films that earned the highest revenue compared to their production cost. Especially some low-budget productions gained extraordinary attention and achieved massive revenue. This shows that success depends not only on budget, but also on good storytelling and marketing."
+   ]
   }
  ],
  "metadata": {
