--- a/notebooks/04_yearly_rating_trend.ipynb
+++ b/notebooks/04_yearly_rating_trend.ipynb
@@ -67,12 +67,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "100fccc7",
+   "cell_type": "markdown",
+   "id": "e4a8a5fb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 8. 📈 Yıllara Göre Ortalama Film Puanları (Trend Analizi)\n",
+    "Yıllara göre ortalama puanlar incelendiğinde, bazı dönemlerde belirgin düşüş ya da yükseliş trendleri gözlemlenebilir. Bu dalgalanmalar, dönemsel film kalitesi, tür trendleri veya kullanıcı değerlendirme alışkanlıklarındaki değişimlerle ilişkili olabilir.\n",
+    "\n",
+    "### 8. 📈 Average Ratings by Year (Trend Analysis)\n",
+    "When examining the average ratings by year, clear up or down trends can be observed in certain periods. These fluctuations may be related to periodical film quality, genre trends, or changes in user review habits."
+   ]
   }
  ],
  "metadata": {
